Use english labels

--- a/teamonitor/views/partials/sprint.jade
+++ b/teamonitor/views/partials/sprint.jade
@@ -3,5 +3,5 @@
   p Sprint #1
 canvas(id="sprintOne", class="canvas-chart")
 .canvas-label
-  p Classifica (3)
+  p Final chart
 canvas(id="classifica" class="canvas-chart")
