Use dynamic sprint numbers

--- a/teamonitor/views/partials/sprint.jade
+++ b/teamonitor/views/partials/sprint.jade
@@ -1,6 +1,6 @@
 #main-wrapper.clearfix
 .canvas-label
-  p Sprint #1
+  p Sprint \#{{sprintId}}
 canvas(id="sprintOne", class="canvas-chart")
 .canvas-label
   p Final chart
